--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prop-types": "^15.7.2",
     "pwstrength-bootstrap": "^3.0.9",
     "react": "^16.12.0",
+    "react-countdown": "^2.3.2",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
