--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bootstrap-tagsinput": "^0.7.1",
     "bootstrap-timepicker": "^0.5.2",
     "bootstrap-touchspin": "^4.2.5",
-    "chart.js": "^2.7.3",
+    "chart.js": "^3.9.1",
     "chocolat": "^0.4.21",
     "cleave.js": "^1.4.7",
     "codemirror": "^5.43.0",
@@ -29,6 +29,7 @@
     "datatables.net-select": "^1.3.1",
     "datatables.net-select-bs4": "1.3.1",
     "dropzone": "^5.7.2",
+    "faker": "^6.6.6",
     "flag-icon-css": "^3.5.0",
     "fullcalendar": "^3.10.0",
     "gmaps": "^0.4.24",
@@ -55,6 +56,7 @@
     "prop-types": "^15.7.2",
     "pwstrength-bootstrap": "^3.0.9",
     "react": "^16.12.0",
+    "react-chartjs-2": "^4.3.1",
     "react-countdown": "^2.3.2",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^16.12.0",
